Bugfix: roster properties not loaded properly